# jp_drivers_test_trainer

./: .gitignore  CITATION.cff  README.md
backend/: .gitignore  README.md  config.yaml  pyproject.toml
backend/data/: jp_drivers.sqlite
backend/scripts/: apply_migrations.py  assign_images.py  ingest.py  normalize.py  scrape_images.py  seed_empty_themes.py  seed_skill_modules.py  seed_themes.py  synthesize_questions.py  validate_skill_modules.py
backend/scripts/scrapers/: __init__.py  br_no_japao.py  dia_adia.py  github_tsv.py  japandl.py  lease_japan.py  lo_pal_skill.py  menkyo_hub.py  npa_pdfs.py  reddit_threads.py
backend/src/: __init__.py  config.py  db.py  main.py
backend/src/api/: dependencies.py
backend/src/llm/: answer_parser.py  exceptions.py  prompts.py  provider.py
backend/src/migrations/: 0001_initial.sql  0002_add_image_url.sql
backend/src/models/: __init__.py  attempt.py  question.py  rag_chunk.py  skill_module.py  study_plan.py  theme.py
backend/src/rag/: __init__.py  chunker.py  embedder.py  ingest.py  retriever.py  vector_store.py
backend/src/repositories/: __init__.py  attempt_repo.py  question_repo.py
backend/src/schemas/: __init__.py  attempt.py  question.py  rag.py  skill.py  study_plan.py  (+2 more)
backend/tests/: test_api_themes_questions_mock.py  test_db.py  test_dry_run.py  test_embedder_store.py  test_ingest.py  test_llm.py  test_llm_prompts.py  test_mock_engine.py  test_normalize.py  test_rag_endpoint.py  test_repositories.py  test_scaffold.py  test_schemas.py  test_scrapers.py  test_skill_api.py  test_study_plan_endpoint.py
(+111 files in other folders)
